[package]
edition = "2018"
exclude = ["index.node"]
license = "ISC"
name = "rs-downloader"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
manic = {version = "0.8.1", features = ["threaded", "openssl"]}
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
once_cell = "1.17.1"

[dependencies.neon]
default-features = false
features = ["napi-6", "channel-api", "promise-api"]
version = "0.10"
